--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Imrane</title>
 </head>
 <body>
-    <h1>Imrane's prortfolio in under constraction</h1>
-    <h6>stay tuned...</h6>
+    <div class="container">
+        <header>
+            <div class="category">Imrane kalakhi</div>
+            <div class="info">
+                <div class="tags">
+                    <i class="fa-solid fa-tag"></i>
+                    <span>Coding, Programming</span>
+                </div>
+                <h1 class="title">Web Coding!</h1>
+                <p class="subtitle">Web programming refers to the writing, markup and coding involved in Web development, which includes
+                    Web content, Web client and server scripting and network security. The most common languages used for Web
+                    programming are XML, HTML, JavaScript, Perl 5 and PHP.
+                </p>
+            </div>
+        </header>
+        <article>
+            <h4>What is Web development?</h4>
+            <p>Web development, also known as website development, refers to the tasks associated with creating, building, and
+                maintaining websites and web applications that run online on a browser. It may, however, also include web design,
+                web programming, and database management.
+            </p>
+            <p>Web development is closely related to the job of designing the features and functionality of apps (web design). The
+                term development is usually reserved for the actual construction of these things (that is to say, the programming of
+                sites).
+            </p>
+            <p>The basic tools involved in web development are programming languages called HTML (Hypertext Markup Language), CSS
+                (Cascading Style Sheets), and JavaScript. There are, however, a number of other programs used to “manage” or
+                facilitate the construction of sites that would otherwise have to be done “from scratch” by writing code. A number
+                of content management systems (CMS) fall into this category, including WordPress, Joomla!, Drupal, TYPO3, and Adobe
+                Experience Manager, among others.
+            </p>
+            <h4>Coding daily, Coding all the time!</h4>
+            <p>"Coding daily, coding all the time!" expresses a strong dedication to coding and programming. It reflects the
+                enthusiasm of someone who is deeply committed to their work or hobby in the field of coding and software
+                development. Many programmers and developers indeed spend a significant amount of their time coding and honing their
+                skills to become proficient or to work on various projects.
+            </p>
+            <p>While dedication and practice are essential for becoming a skilled coder, it's also important to strike a balance to
+                prevent burnout and maintain a healthy lifestyle. It's crucial to take breaks, rest, and engage in other activities
+                to avoid excessive stress and ensure long-term productivity and well-being.
+            </p>
+            <blockquote>"Coding daily, coding all the time, is the path to mastering the language of computers and unlocking the door
+                to endless possibilities in the digital world." &mdash; ChatGPT
+            </blockquote>
+            <p>Coding every day can be a valuable and productive practice for those who are passionate about programming and want to
+                excel in the field
+            </p>
+        </article>
+    </div>
 </body>
 </html>
