--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="container">
         <header>
+            <nav class="navbar">
+                <a class="linkclass">About me</a>
+                <a class="linkclass">Projects</a>
+                <a class="linkclass">Favorite quotes</a>
+                <a class="linkclass">Contact</a>
+            </nav>
             <div class="category">Imrane kalakhi</div>
             <div class="info">
                 <div class="tags">
