fixing learn more button and adding a popup

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     <i class="fa-solid fa-tag"></i>
                     <span>Coding, Programming</span>
                 </div>
-                <h1 class="title">Web Development!</h1>
+                <h1 class="title">Web Development</h1>
                 <p class="subtitle">Web programming refers to the writing, markup and coding involved in Web development, which includes
                     Web content, Web client and server scripting and network security. The most common languages used for Web
                     programming are XML, HTML, JavaScript, Perl 5 and PHP.
                 </p>
-                <button><h3> learn more...</h3></button>
-                <!-- <div class="category"><a href="https://github.com/ikalakhi">Imrane kalakhi</a></div> -->
+                <button id="popup-link" href="/index.html"><h3>Learn more...</h3></button>
             </div>
+                <!-- <div class="category"><a href="https://github.com/ikalakhi">Imrane kalakhi</a></div> -->
         </header>
-        <article>
+        <article id="popup-window">
             <h4>What is Web development?</h4>
             <p>Web development, also known as website development, refers to the tasks associated with creating, building, and
                 maintaining websites and web applications that run online on a browser. It may, however, also include web design,
@@ -63,6 +63,7 @@
             <p>Coding every day can be a valuable and productive practice for those who are passionate about programming and want to
                 excel in the field
             </p>
+            <button id="close-button"><h3>Close</h3></button>
         </article>
     </div>
     <script src="index.js"></script>
