fixing projects button

--- a/index.html
+++ b/index.html
@@ -83,6 +83,72 @@
             </p>
             <button id="close-aboutMe"><h3>Close</h3></button>
         </div>
+        <div class="projectsPage">
+            <div>
+                <h1>My Projects</h1>
+                <li>Clean Blog</li>
+                <h6>Language/frameworks: javascript with express framework</h6>
+                <p>Clean blog is a web application where I contacted the backend
+                    that allows users to create an account, publish blog posts and
+                    customize them with the images of their choice. Users can log
+                    in and out of their accounts, and their sessions remain active
+                    until they decide to terminate them. The project also includes
+                    an "About Me" page where the author shares information
+                    about himself
+                </p>
+                <a href="https://github.com/ikalakhi/Clean-Blog">Github Link</a>
+            </div>
+            <div>
+                <li>WEATHERAPP</li>
+                <h6>Language/frameworks: javascript with (CSS and HTML)</h6>
+                <p>This application allows you to check the weather for any place
+                    you specify, thanks to the magic of APIs. It's amazing how
+                    technology allows us to retrieve data in real time and present
+                    it in a user-friendly way. it challenges me to apply what I have
+                    learned, to solve problems and, above all, to foster a deeper
+                    understanding of web development.
+                </p>
+                <a href="https://github.com/ikalakhi/weatherApp">Github Link</a>
+            </div>
+            <div>
+                <li>SUPER MARIO</li>
+                <h6>Language/frameworks: CSS and HTML</h6>
+                <p>MarioClub is a front-end project that I developed while following 
+                    The Net Ninja's tutorial on YouTube. This project allowed me to 
+                    dive into the fundamentals of HTML and CSS. It revolves around creating
+                     a visually appealing and interactive user interface for a fictional "MarioClub" website.
+                      The project aimed to enhance my understanding of web development concepts and improve my 
+                      skills in designing and styling web pages.
+                </p>
+                <a href="https://github.com/ikalakhi/super-mario">Github Link</a>
+            </div>
+            <div>
+                <li>PHILOSOPHERS</li>
+                <h6>Language/frameworks: C</h6>
+                <p>The problem of the philosophers of the dining room is a
+                    famous problem in computer science used to illustrate
+                    common problems in simultaneous programming. The
+                    problem was originally formulated in 1965 by Edsger Dijkstra.
+                </p>
+                <a href="https://github.com/ikalakhi/Philosophers">Github Link</a>
+            </div>
+            <div>
+                <li>PUSH SWAP</li>
+                <h6>Language/frameworks: C</h6>
+                <p>One of the algorithm projects that I have unlocked is called
+                    Push_Swap. The idea is simple, You have two stacks called
+                    Stack A and Stack B. Stack A receives a random list of
+                    unorganized numbers. You need to take the random list of
+                    numbers in stack A and sort them so that stack A is organized
+                    from smallest to largest. There are only a few movements that
+                    you are allowed to use to manipulate the stacks that we are
+                    going to call “Actions”. The main goal of this project is to
+                    organize the A-stack in as few actions as possible.
+                </p>
+                <a href="https://github.com/ikalakhi/push_swap">Github Link</a>
+            </div>
+            <button id="close-projectsPage"><h3>Close</h3></button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
