fixing contact button

--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
             </div>
             <button id="close-projectsPage"><h3>Close</h3></button>
         </div>
+        <div class="myContacts">
+            <h1>MY CONTACTS</h1>
+            <div class="icons">
+                <img src="media/github.png" alt="github" id="github">
+                <img src="media/linkedin.png" alt="linkedin" id="linkedin">
+                <img src="media/X.png" alt="x" id="x">
+                <img src="media/instagram.png" alt="instagram" id="instagram">
+            </div>
+            <div class="contacts">
+                <a href="https://github.com/ikalakhi">Github</a>
+                <a href="https://www.linkedin.com/in/imrane-kalakhi-3b0878235/">LinkedIn</a>
+                <a href="https://twitter.com/imranekalakhi">X (Twitter)</a>
+                <a href="https://www.instagram.com/_internet_explorer1/">Instagram</a>
+            </div>
+            <button id="close-contactPage"><h3>Close</h3></button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
