fixing bug: clear page after preasing any button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="projectsPage">
             <div>
                 <h1>My Projects</h1>
-                <li>Clean Blog</li>
+                <li>CLEAN BLOG</li>
                 <h6>Language/frameworks: javascript with express framework</h6>
                 <p>Clean blog is a web application where I contacted the backend
                     that allows users to create an account, publish blog posts and
